src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;


html, body {
  height: 100%;
  width: 100%;
  margin: 0;
  padding: 0;
  background-color: #000;
  color: white;
}

@layer components {
  .activations {
    .pinpoint{
      width: 70px;
      height: 70px;
      position: relative;

      .content{
        width: 65%;
        height: 65%;
        position: absolute;
        background: #ffffff1a;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
        border-radius: 100%;
      }
      .pinpoint-ring{
        width: 100%;
        height: 100%;
      }
      svg{
        width: 100%;
        height: 100%;
        .circle{
          stroke-dashoffset: 0;
          stroke-dasharray:300;
          stroke-width:  7;
        }
      }
    }
  }
  
  .mobileBg {
    background: no-repeat url('../../public/bg-ativacoes-mobile.png');
  }
  
  .tvBg {
    background: url('/public/bg-ativacoes-tv.png')
  }
  
  .spin {
    transform-origin: center;
    animation: spin 2s linear infinite;
  }
  
  @keyframes spin {
    from {
      transform: rotate(0deg);
    }
    to {
      transform: rotate(360deg);
    }
  }
}

